# app/gateway/http/transfer/create_transfer.go
@@ -14,15 +14,15 @@ import (
 	"stoneBanking/app/gateway/http/transfer/vo/output"
 )
 
-//@Sumary Create a transfer
+//@Summary Create a transfer
 //@Description With the data received, validate her and if all is correct, create a new transfer, and update the balance of accounts
 //@Accept json
 //@Produce json
 //@Param authorization header string true "Authorization Token"
 //@Param transfer body input.CreateTransferVO true "Transfer Creation Data"
 //@Success 200 {object} output.TransferOutputVO
-//@Failure	400 {object} output.OutputError
-//@Failure 500 {object} output.OutputError
+//@Failure	400 {object} response.OutputError
+//@Failure 500 {object} response.OutputError
 //@Router /transfers [POST]
 func (controller Controller) Create(w http.ResponseWriter, r *http.Request) {
 	const operation = "Gateway.Rest.Transfer.Create"
