# app/gateway/http/transfer/get_all_by_account_id.go
@@ -11,14 +11,14 @@ import (
 	"stoneBanking/app/gateway/http/transfer/vo/output"
 )
 
-//@Sumary Get all transfers
+//@Summary Get all transfers
 //@Description With a valid Authorization Token, get all the transfers that has made or received by the account
 //@Accept json
 //@Produce json
 //@Param authorization header string true "Authorization Token"
 //@Success 200 {object} []output.TransferOutputVO
-//@Failure	400 {object} output.OutputError
-//@Failure 500 {object} output.OutputError
+//@Failure	400 {object} response.OutputError
+//@Failure 500 {object} response.OutputError
 //@Router /transfers [GET]
 func (controller Controller) GetAllByAccountID(w http.ResponseWriter, r *http.Request) {
 	const operation = "Gateway.Rest.Transfer.GetAllByAccountID"
