# docs/swagger.json
@@ -20,6 +20,7 @@
                 "produces": [
                     "application/json"
                 ],
+                "summary": "Get All Accounts",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -33,25 +34,26 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_account_vo_output.OutputError"
+                            "$ref": "#/definitions/response.OutputError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_account_vo_output.OutputError"
+                            "$ref": "#/definitions/response.OutputError"
                         }
                     }
                 }
             },
             "post": {
-                "description": "With the data received, validate her and if all is correct, and dont exist a account with that document, create a new account",
+                "description": "With the data received, validate her and if all is correct, and don't exist a account with that document, create a new account",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
+                "summary": "Create a account",
                 "parameters": [
                     {
                         "description": "Account Creation Data",
@@ -73,24 +75,25 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_account_vo_output.OutputError"
+                            "$ref": "#/definitions/response.OutputError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_account_vo_output.OutputError"
+                            "$ref": "#/definitions/response.OutputError"
                         }
                     }
                 }
             }
         },
-        "/accounts/balance": {
+        "/accounts/{account_id}/balance": {
             "get": {
                 "description": "With a authorization token valid, return the balance of a account",
                 "produces": [
                     "application/json"
                 ],
+                "summary": "Get the balance of a account",
                 "parameters": [
                     {
                         "type": "string",
@@ -110,13 +113,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_account_vo_output.OutputError"
+                            "$ref": "#/definitions/response.OutputError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_account_vo_output.OutputError"
+                            "$ref": "#/definitions/response.OutputError"
                         }
                     }
                 }
@@ -131,6 +134,7 @@
                 "produces": [
                     "application/json"
                 ],
+                "summary": "Log in the account",
                 "parameters": [
                     {
                         "description": "Account Login Data",
@@ -152,19 +156,61 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_account_vo_output.OutputError"
+                            "$ref": "#/definitions/response.OutputError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_account_vo_output.OutputError"
+                            "$ref": "#/definitions/response.OutputError"
                         }
                     }
                 }
             }
         },
-        "/transfer": {
+        "/transfers": {
+            "get": {
+                "description": "With a valid Authorization Token, get all the transfers that has made or received by the account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get all transfers",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization Token",
+                        "name": "authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/output.TransferOutputVO"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.OutputError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.OutputError"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "With the data received, validate her and if all is correct, create a new transfer, and update the balance of accounts",
                 "consumes": [
@@ -173,6 +219,7 @@
                 "produces": [
                     "application/json"
                 ],
+                "summary": "Create a transfer",
                 "parameters": [
                     {
                         "type": "string",
@@ -201,56 +248,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_transfer_vo_output.OutputError"
+                            "$ref": "#/definitions/response.OutputError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_transfer_vo_output.OutputError"
-                        }
-                    }
-                }
-            }
-        },
-        "/transfers": {
-            "get": {
-                "description": "With a valid Authorization Token, get all the transfers that has made or received by the account",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization Token",
-                        "name": "authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/output.TransferOutputVO"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_transfer_vo_output.OutputError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/stoneBanking_app_gateway_http_transfer_vo_output.OutputError"
+                            "$ref": "#/definitions/response.OutputError"
                         }
                     }
                 }
@@ -282,7 +286,7 @@
         "input.CreateTransferVO": {
             "type": "object",
             "properties": {
-                "account_destiny_id": {
+                "account_destination_id": {
                     "type": "string",
                     "example": "3"
                 },
@@ -355,7 +359,7 @@
         "output.TransferOutputVO": {
             "type": "object",
             "properties": {
-                "account_destiny_id": {
+                "account_destination_id": {
                     "type": "string",
                     "example": "bf89f445-70d3-442f-9821-55699a868704"
                 },
@@ -377,16 +381,7 @@
                 }
             }
         },
-        "stoneBanking_app_gateway_http_account_vo_output.OutputError": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "error"
-                }
-            }
-        },
-        "stoneBanking_app_gateway_http_transfer_vo_output.OutputError": {
+        "response.OutputError": {
             "type": "object",
             "properties": {
                 "error": {
